# rabbitmq_rpc_py

./: .gitignore  README.md  pyproject.toml  setup.py
src/rabbitmq_rpc_py/: __init__.py  rpc.py
