[project]
name = "rabbitmq_rpc_py"
version = "0.1.0"
description = "Acynchronous RabbitMQ RPC on top of aio-pika"
dependencies = [
    "aio-pika>=9.0.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rabbitmq_rpc_py"]
